src/tests/snapshots/parser_test__tests__lexer__lexer_errors@unclosed_comment.txt.snap
---
source: src/tests/lexer.rs
expression: res.unwrap_err()
input_file: src/tests/lexer_inputs/errors/unclosed_comment.txt
---
Error {
    kind: SyntaxError(
        SyntaxError {
            message: "Closing comment tag `#}` not found",
            filename: "",
            span:  @ 1:0-1:2 (0..2),
        },
    ),
    source: None,
}
