src/tests/snapshots/parser_test__tests__lexer__lexer_errors@unexpected_character.txt.snap
---
source: src/tests/lexer.rs
expression: res.unwrap_err()
input_file: src/tests/lexer_inputs/errors/unexpected_character.txt
---
Error {
    kind: SyntaxError(
        SyntaxError {
            message: "Unexpected character",
            filename: "",
            span:  @ 1:3-1:3 (3..3),
        },
    ),
    source: None,
}
