src/tests/snapshots/parser_test__tests__lexer__lexer_ok@basic.txt.snap
---
source: src/tests/lexer.rs
expression: "&tokens"
input_file: src/tests/lexer_inputs/success/basic.txt
---
[
    CONTENT("Hello "),
    VARIABLE_START(false),
    IDENT(username),
    VARIABLE_END(false),
    CONTENT(", {welcome}."),
]
